Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17477

Wrong result for TIME('-2001-01-01 10:20:30') and numerous other str-to-time conversion problems

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL)
    • 10.4.0
    • Temporal Types
    • None

    Description

      SELECT TIME('-2001-01-01 10:20:30');
      

      +------------------------------+
      | TIME('-2001-01-01 10:20:30') |
      +------------------------------+
      | 10:20:30                     |
      +------------------------------+
      

      Looks wrong. The expected result is NULL.

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Alexander Barkov made transition -
            Open Closed
            3d 22h 38m 1

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.