MDEV-17477 Wrong result for TIME('-2001-01-01 10:20:30') and numerous other str-to-time conversion problems MDEV-17478 Wrong result for TIME('+100:20:30')